# pyo3-performance-test

./: .pylintrc
basic-example/: Cargo.toml  main.py  pyproject.toml
basic-example/basic_example/: __init__.py
basic-example/src/: lib.rs
prime/: Cargo.toml  benchmark_results.csv  benchmark_results_win.csv  plot.py  profiler.py  test_perf.py  w_numpy.py  wo_rust.py
prime/prime/: __init__.py  prime.pyi
prime/src/: lib.rs
