[package]
name = "prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prime"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23.0"
pyo3 = { version = "0.23.1", features = ["extension-module"] }
rustfft = "6.2.0"

